# Eval_master

./: .gitignore  README-runner.md  TODO-HPC.md  pyproject-HPC.toml  pyproject.toml  run_all.sh  run_benchmarks.py  setup_envs.sh  setup_envs_HPC.sh  setup_envs_local.sh
FaithEval-reproduce/: ARCHITECTURE.md  README.md  pyproject-HPC.toml  pyproject.toml
FaithEval-reproduce/configs/: counterfactual.yaml  inconsistent.yaml  unanswerable.yaml
FaithEval-reproduce/data/faitheval/FaithEval-counterfactual-v1.0/: test.jsonl
FaithEval-reproduce/scripts/: prepare_datasets.py
FaithEval-reproduce/src/: run_eval.py
FaithEval-reproduce/src/faitheval/: data.py  model.py
FaithEval-reproduce/tests/: test_data.py  test_metrics.py
FaithEval_reproduce/: CODEOWNERS  README.md  pyproject.toml
FaithEval_reproduce/src/faitheval/: __init__.py  cli.py  config.py  data.py  evaluator.py  metrics.py  prompting.py
HaluEval-reproduce/: ARCHITECTURE.md  README.md  pyproject-HPC.toml  pyproject.toml
HaluEval-reproduce/evaluation/: REPRODUCIBILITY.md  evaluate.py  hf_local.py
RAGTruth-reproduce/: ARCHITECTURE.md  README.md  SAMPLING.md  pyproject-HPC.toml  pyproject.toml
RAGTruth-reproduce/src/: run_eval.py
RAGTruth-reproduce/src/ragtruth_eval/: __init__.py  cli.py  data.py  detect.py  generate.py  metrics.py  model.py  prompts.py
RAGTruth-reproduce/tests/: test_metrics.py
TruthfulQA-reproduce/: ARCHITECTURE.md  README.md  pyproject-HPC.toml  pyproject.toml
TruthfulQA-reproduce/tests/: test_judge_local.py  test_mc_regression.py  test_prompting.py
TruthfulQA-reproduce/truthfulqa/: evaluate.py  hf_local.py  judge_local.py  metrics.py  models.py  prompting.py
analysis/: __init__.py  aggregate.py  cli.py  compare.py  discover.py  fixtures.py  model.py  parse.py  plot.py  report.py  run_analysis.sh  run_eval_ensemble.sh  run_plots.sh  spec.py  stats.py
analysis/tests/: conftest.py  test_aggregate.py  test_cli.py  test_compare.py  test_discover.py  test_parse.py  test_plot.py  test_report.py  test_stats.py
conf/: config.yaml
conf/faitheval/: default.yaml
conf/halueval/: default.yaml
conf/harness/: default.yaml
conf/model/: _template.yaml  qwen_tiny.yaml
conf/ragtruth/: default.yaml
conf/truthfulqa/: default.yaml
harness-eval/: ARCHITECTURE.md  README.md  SAMPLING.md  creation-plan.md  pyproject-HPC.toml  pyproject.toml
harness-eval/src/: run_eval.py
harness-eval/src/harness_eval/: __init__.py  _datasets_compat.py  cli.py  config.py  evaluator.py  model.py  results.py  tasks.py
harness-eval/tests/: test_cli.py  test_datasets_compat.py  test_model_args.py  test_results.py  test_tasks.py
