[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-master"
version = "0.1.0"
description = "Central Hydra launcher that composes one shared model config and runs the four *-reproduce benchmarks (FaithEval, TruthfulQA, HaluEval, RAGTruth) as subprocesses in their own per-benchmark environments."
readme = "README-runner.md"
requires-python = ">=3.9"

# The launcher itself only needs Hydra; each benchmark brings its own stack in
# its own virtualenv (see setup_envs.sh / README-runner.md). numpy backs the
# read-only `analysis` aggregation package; scipy/matplotlib are lazy extras.
dependencies = [
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
stats = ["scipy>=1.10"]        # Wilcoxon signed-rank in analysis.stats (lazy import)
plot = ["matplotlib>=3.7"]     # figures in analysis.plot (lazy import)

# run_benchmarks.py is a script run in place; the importable code is the additive
# read-only `analysis` package (aggregation / comparison / plotting over results).
[tool.setuptools.packages.find]
include = ["analysis*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["analysis/tests"]
