[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faitheval"
version = "0.1.0"
description = "Evaluation CLI for the FaithEval contextual-faithfulness benchmark."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
dependencies = [
    "torch>=2.1,<3",
    "transformers>=4.44,<5",
    "accelerate>=0.33,<2",
    "datasets>=2.20,<4",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "peft>=0.11,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
faitheval-eval = "faitheval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
