[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthfulqa"
version = "0.1.0"
description = "Evaluation code for the TruthfulQA benchmark, with local-checkpoint / LoRA model support."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

# Core deps for the generation, multiple-choice (MC1/MC2/MC3) and local
# GPT-judge / GPT-info paths, including running your own checkpoint / LoRA adapter
# via `--model_path` (see truthfulqa/hf_local.py, truthfulqa/judge_local.py).
#
# Major versions are capped: this code targets the transformers 4.x API, and an
# unbounded range silently resolves to a different stack over time, which would
# make runs incomparable to the recorded baseline. `uv.lock` pins the exact
# resolution — run `uv sync` (not a bare `pip install`) to reproduce it.
dependencies = [
    "torch>=2.1,<3",
    "transformers>=4.44,<5",
    "accelerate>=0.33,<2",     # device_map / from_pretrained placement for the judges
    "datasets>=2.18,<4",
    "peft>=0.11,<1",
    "pandas>=1.5",
    "numpy>=1.24",
    "scikit-learn>=1.1",
    "sentencepiece>=0.1.99",   # T5 / UnifiedQA tokenizers
]

[project.optional-dependencies]
# GPT-3 answer generation and the GPT-judge / GPT-info metrics (`--metrics judge info`).
# Legacy reproduction path; needs OpenAI API access. Imported lazily.
openai = ["openai>=0.27"]
# BLEU / ROUGE (via t5) and BLEURT (via datasets.load_metric). These are the
# original paper's similarity metrics and pull a heavy, dated stack:
#   * t5 requires TensorFlow;
#   * datasets.load_metric was removed in datasets 3.0, so BLEURT needs <3.0.
# All are imported lazily, so they are only required when you actually pass
# `--metrics bleu`, `--metrics rouge`, or `--metrics bleurt`.
legacy-metrics = [
    "t5>=0.9.0",
    "datasets<3.0",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["truthfulqa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: downloads and runs a model (deselect with -m 'not slow')",
]
